# utilities

./: .editorconfig  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  LICENSE  README.md  bump-version.js  components.json  eslint.config.ts  index.html  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: code-quality.yml  dependabot-automerge.yml  release.yml
.husky/: commit-msg  pre-commit
scripts/: bump-version.js  rename-app.js  utils.js
src/: App.tsx  App.vue  main.ts  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: event.rs  menu.rs  mod.rs  tray.rs  window.rs
src-tauri/src/command/: mod.rs
src-tauri/src/config/: event.rs  mod.rs  tray.rs
src-tauri/src/image/: command.rs  info.rs  mod.rs
src/components/app/Sidebar/: AppSidebar.tsx  CodeGroup.tsx  CodeMenu.tsx  FooterSidebar.tsx  ImageMenu.tsx  Layout.tsx  MenuCode.tsx  MenuImage.tsx  MenuSidebar.tsx
src/components/editor/: CodeMirrorEditor.vue  index.ts  utils.ts
src/components/ui/: collapsible.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
src/components/ui/breadcrumb/: Breadcrumb.vue  BreadcrumbEllipsis.vue  BreadcrumbItem.vue  BreadcrumbLink.vue  BreadcrumbList.vue  BreadcrumbPage.vue  BreadcrumbSeparator.vue
src/components/ui/button/: Button.vue  index.ts
src/components/ui/button-group/: ButtonGroup.vue  ButtonGroupSeparator.vue  ButtonGroupText.vue  index.ts
src/components/ui/collapsible/: Collapsible.vue  CollapsibleContent.vue  CollapsibleTrigger.vue
src/components/ui/dropdown-menu/: DropdownMenu.vue  DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuGroup.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuRadioGroup.vue  DropdownMenuRadioItem.vue  DropdownMenuSeparator.vue  DropdownMenuShortcut.vue  DropdownMenuSub.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue  DropdownMenuTrigger.vue
src/components/ui/input/: Input.vue
src/components/ui/input-group/: InputGroup.vue  InputGroupAddon.vue  InputGroupButton.vue  InputGroupInput.vue  InputGroupText.vue  InputGroupTextarea.vue  index.ts
src/components/ui/label/: Label.vue
src/components/ui/separator/: Separator.vue
src/components/ui/sheet/: Sheet.vue  SheetClose.vue  SheetContent.vue  SheetDescription.vue  SheetFooter.vue  SheetHeader.vue  SheetOverlay.vue  SheetTitle.vue  SheetTrigger.vue
src/components/ui/sidebar/: Sidebar.vue  SidebarContent.vue  SidebarFooter.vue  SidebarGroup.vue  SidebarGroupAction.vue  SidebarGroupContent.vue  SidebarGroupLabel.vue  SidebarHeader.vue  index.ts  (+17 more)
src/composables/: use-clipboard-copy.ts  use-features.ts
src/features/: Base64.vue  Color.vue  Hash.vue  Json.vue  LoremIpsum.vue  RandomString.vue  Url.vue  Uuid.vue  index.ts
src/hooks/: use-drag-drop.ts
src/layouts/: AppLayout.vue  AppSidebar.vue  FeatureGroup.vue  MainContent.vue
src/layouts/app-shell/: AppContent.vue  AppShell.vue  AppSidebar.vue  FeatureGroup.vue  index.ts
src/styles/: fonts.css  globals.css
src/types/: image.d.ts
src/utils/: utils.ts
src/views/: Home.tsx  ImageComparison.tsx  ImageConverter.tsx  ImageInfo.tsx  Main.tsx  Splash.tsx
(+8 files in other folders)
