[package]
name = "Kazmas"
version = "0.0.1"
description = "The Kazmas App"
authors = ["Duong Hieu"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kazmas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tauri = { version = "2", features = [] }
tauri-plugin-devtools = "2.1.0"
tauri-plugin-log = "2"
tauri-specta = { version = "2.0.0-rc.24", features = ["javascript", "typescript"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
