[package]
name = "utilities"
version = "0.0.1"
description = "Utilities"
authors = ["duonghieu0712z"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "utilities_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = "0.4.44"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-devtools = "2.1.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-prevent-default = "5.0.0"
tauri-specta = { version = "2.0.0-rc.25", features = ["javascript", "typescript"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
